--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "webpack-prod": "webpack --mode production",
+    "webpack-dev": "webpack --mode development",
     "dev": "nodemon server.js",
     "webpack-watch": "webpack --watch"
   },
