--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
     "babel-loader": "^9.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.88.1",
