--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack-prod": "webpack --mode production",
     "webpack-dev": "webpack --mode development",
     "dev": "nodemon server.js",
-    "webpack-watch": "webpack --watch"
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "nodemon": "^3.0.1",
     "video.js": "^8.3.0"
   }
