--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^9.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "hammerjs": "^2.0.8",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
